fix(toolbar): fix visibility issue of tooltip shortcut in light mode

--- a/src/components/Playground/Toolbar/ToolbarBtn/ToolbarBtn.module.scss
+++ b/src/components/Playground/Toolbar/ToolbarBtn/ToolbarBtn.module.scss
@@ -35,5 +35,6 @@
       padding: 0.5rem;
       border-radius: 0.5rem;
       margin-right: -0.5rem;
+      color: var(--text-primary);
    }
 }
